refactored test to use Java 8 Collection utils